--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Unzone/Unzone/Unzone.Android/bin/Debug
 /Unzone/Unzone/Unzone/bin/Release/netstandard2.0
 /Unzone/Unzone/Unzone.UWP/bin/x86/Release
+/Unzone/Unzone/Unzone.iOS/bin/iPhone/Debug
